# SIFModel

./: README.md  pyproject.toml  pyrightconfig.json  run_model.py
outputs/: latest_predictions.csv  latest_run.json
src/sif_model/: __init__.py  pipeline.py
